--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -19,13 +19,14 @@
    },
    "outputs": [],
    "source": [
-    "# Dependencies and Setup\n",
+    "# Dependencies and Setup    \n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
     "import time\n",
     "from scipy.stats import linregress\n",
+    "import json\n",
     "\n",
     "# Import API key\n",
     "from api_keys import weather_api_key\n",
@@ -83,7 +84,8 @@
     "        cities.append(city)\n",
     "\n",
     "# Print the city count to confirm sufficient count\n",
-    "len(cities)"
+    "len(cities)\n",
+    "print(cities)\n"
    ]
   },
   {
@@ -1838,9 +1840,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "mypydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mypydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1852,7 +1854,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
