Includes through data plotting

--- a/starter_code/WeatherPy.ipynb
+++ b/starter_code/WeatherPy.ipynb
@@ -1418,7 +1418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "df1[‘Total Humidity’] = np.where(condition, ‘value if true’, ‘value if false’)"
    ]
   },
   {
