Final push for weather

--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -45,6 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import csv\n",
+    "filename = weather_data.csv\n",
     "\n"
    ]
   },
