Done up to hotels

--- a/starter_code/WeatherPy_Assignment.ipynb
+++ b/starter_code/WeatherPy_Assignment.ipynb
@@ -1275,6 +1275,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25e93220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Make a new DataFrame equal to the city data to drop all humidity outliers by index.\n",
+    "# # Passing \"inplace=False\" will make a copy of the city_data DataFrame, which we call \"clean_city_data\".\n",
+    "# weather_data[‘Humidity’] = np.where(weather_data['Humidity'] > 90 or < 10, ‘value if true’, ‘value if false’)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "389a1f76",
    "metadata": {},
