--- a/starter_code/VacationPy.ipynb
+++ b/starter_code/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,226 +72,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Arraial do Cabo</td>\n",
-       "      <td>-22.9661</td>\n",
-       "      <td>-42.0278</td>\n",
-       "      <td>294.07</td>\n",
-       "      <td>68</td>\n",
-       "      <td>75</td>\n",
-       "      <td>2.57</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1633729266</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Māndleshwar</td>\n",
-       "      <td>22.1833</td>\n",
-       "      <td>75.6667</td>\n",
-       "      <td>300.37</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>1633729268</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Broome</td>\n",
-       "      <td>42.2506</td>\n",
-       "      <td>-75.8330</td>\n",
-       "      <td>294.24</td>\n",
-       "      <td>70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1633729270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Punta Arenas</td>\n",
-       "      <td>-53.1500</td>\n",
-       "      <td>-70.9167</td>\n",
-       "      <td>282.21</td>\n",
-       "      <td>40</td>\n",
-       "      <td>20</td>\n",
-       "      <td>15.95</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>1633729040</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Margate</td>\n",
-       "      <td>51.3813</td>\n",
-       "      <td>1.3862</td>\n",
-       "      <td>285.86</td>\n",
-       "      <td>82</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1.34</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>1633729273</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>569</th>\n",
-       "      <td>569</td>\n",
-       "      <td>Beira</td>\n",
-       "      <td>-19.8436</td>\n",
-       "      <td>34.8389</td>\n",
-       "      <td>292.09</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.68</td>\n",
-       "      <td>MZ</td>\n",
-       "      <td>1633730112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>570</th>\n",
-       "      <td>570</td>\n",
-       "      <td>Dwārka</td>\n",
-       "      <td>22.2394</td>\n",
-       "      <td>68.9678</td>\n",
-       "      <td>301.52</td>\n",
-       "      <td>77</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2.78</td>\n",
-       "      <td>IN</td>\n",
-       "      <td>1633730113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>571</th>\n",
-       "      <td>571</td>\n",
-       "      <td>Cururupu</td>\n",
-       "      <td>-1.8283</td>\n",
-       "      <td>-44.8683</td>\n",
-       "      <td>298.42</td>\n",
-       "      <td>84</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1.69</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1633730114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>572</th>\n",
-       "      <td>572</td>\n",
-       "      <td>Evanston</td>\n",
-       "      <td>42.0411</td>\n",
-       "      <td>-87.6901</td>\n",
-       "      <td>293.90</td>\n",
-       "      <td>83</td>\n",
-       "      <td>61</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1633730017</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>573</th>\n",
-       "      <td>573</td>\n",
-       "      <td>Birao</td>\n",
-       "      <td>10.2849</td>\n",
-       "      <td>22.7882</td>\n",
-       "      <td>298.42</td>\n",
-       "      <td>47</td>\n",
-       "      <td>77</td>\n",
-       "      <td>1.08</td>\n",
-       "      <td>CF</td>\n",
-       "      <td>1633730117</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>574 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0             City      Lat      Lon    Temp  Humidity  \\\n",
-       "0             0  Arraial do Cabo -22.9661 -42.0278  294.07        68   \n",
-       "1             1      Māndleshwar  22.1833  75.6667  300.37        65   \n",
-       "2             2           Broome  42.2506 -75.8330  294.24        70   \n",
-       "3             3     Punta Arenas -53.1500 -70.9167  282.21        40   \n",
-       "4             4          Margate  51.3813   1.3862  285.86        82   \n",
-       "..          ...              ...      ...      ...     ...       ...   \n",
-       "569         569            Beira -19.8436  34.8389  292.09        88   \n",
-       "570         570           Dwārka  22.2394  68.9678  301.52        77   \n",
-       "571         571         Cururupu  -1.8283 -44.8683  298.42        84   \n",
-       "572         572         Evanston  42.0411 -87.6901  293.90        83   \n",
-       "573         573            Birao  10.2849  22.7882  298.42        47   \n",
-       "\n",
-       "     Cloudiness  Wind Speed Country        Date  \n",
-       "0            75        2.57      BR  1633729266  \n",
-       "1            65        0.50      IN  1633729268  \n",
-       "2             1        0.45      US  1633729270  \n",
-       "3            20       15.95      CL  1633729040  \n",
-       "4             7        1.34      GB  1633729273  \n",
-       "..          ...         ...     ...         ...  \n",
-       "569           0        2.68      MZ  1633730112  \n",
-       "570          14        2.78      IN  1633730113  \n",
-       "571          18        1.69      BR  1633730114  \n",
-       "572          61        2.15      US  1633730017  \n",
-       "573          77        1.08      CF  1633730117  \n",
-       "\n",
-       "[574 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "weather_data_csv = \"weather_data.csv\"\n",
     "weather_data_df = pd.read_csv(weather_data_csv)\n",
@@ -310,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,24 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "def834d529214f4bbb268e3ca39d13fe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Figure(layout=FigureLayout(height='420px'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a humidity heatmap layer\n",
     "fig = gmaps.figure()\n",
@@ -374,148 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lon</th>\n",
-       "      <th>Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>120</th>\n",
-       "      <td>120</td>\n",
-       "      <td>Solenzo</td>\n",
-       "      <td>12.1833</td>\n",
-       "      <td>-4.0833</td>\n",
-       "      <td>300.33</td>\n",
-       "      <td>57</td>\n",
-       "      <td>90</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>BF</td>\n",
-       "      <td>1633729442</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>143</th>\n",
-       "      <td>143</td>\n",
-       "      <td>Russell</td>\n",
-       "      <td>32.3502</td>\n",
-       "      <td>-85.1999</td>\n",
-       "      <td>300.97</td>\n",
-       "      <td>56</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4.63</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1633729184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>167</th>\n",
-       "      <td>167</td>\n",
-       "      <td>‘Āhuimanu</td>\n",
-       "      <td>21.4447</td>\n",
-       "      <td>-157.8378</td>\n",
-       "      <td>300.47</td>\n",
-       "      <td>58</td>\n",
-       "      <td>20</td>\n",
-       "      <td>7.72</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1633729512</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>383</th>\n",
-       "      <td>383</td>\n",
-       "      <td>Antsohihy</td>\n",
-       "      <td>-14.8796</td>\n",
-       "      <td>47.9875</td>\n",
-       "      <td>297.01</td>\n",
-       "      <td>59</td>\n",
-       "      <td>96</td>\n",
-       "      <td>3.76</td>\n",
-       "      <td>MG</td>\n",
-       "      <td>1633729839</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>470</th>\n",
-       "      <td>470</td>\n",
-       "      <td>Lençóis Paulista</td>\n",
-       "      <td>-22.5986</td>\n",
-       "      <td>-48.8003</td>\n",
-       "      <td>298.36</td>\n",
-       "      <td>57</td>\n",
-       "      <td>12</td>\n",
-       "      <td>3.78</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>1633729965</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>540</th>\n",
-       "      <td>540</td>\n",
-       "      <td>Guerrero Negro</td>\n",
-       "      <td>27.9769</td>\n",
-       "      <td>-114.0611</td>\n",
-       "      <td>298.51</td>\n",
-       "      <td>58</td>\n",
-       "      <td>46</td>\n",
-       "      <td>9.37</td>\n",
-       "      <td>MX</td>\n",
-       "      <td>1633730067</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Unnamed: 0              City      Lat       Lon    Temp  Humidity  \\\n",
-       "120         120           Solenzo  12.1833   -4.0833  300.33        57   \n",
-       "143         143           Russell  32.3502  -85.1999  300.97        56   \n",
-       "167         167         ‘Āhuimanu  21.4447 -157.8378  300.47        58   \n",
-       "383         383         Antsohihy -14.8796   47.9875  297.01        59   \n",
-       "470         470  Lençóis Paulista -22.5986  -48.8003  298.36        57   \n",
-       "540         540    Guerrero Negro  27.9769 -114.0611  298.51        58   \n",
-       "\n",
-       "     Cloudiness  Wind Speed Country        Date  \n",
-       "120          90        2.56      BF  1633729442  \n",
-       "143           1        4.63      US  1633729184  \n",
-       "167          20        7.72      US  1633729512  \n",
-       "383          96        3.76      MG  1633729839  \n",
-       "470          12        3.78      BR  1633729965  \n",
-       "540          46        9.37      MX  1633730067  "
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "good_humidity = weather_data_df[(weather_data_df['Humidity'] < 60)].dropna()\n",
     "best_humidity = good_humidity[(good_humidity['Humidity'] > 55)].dropna()\n",
@@ -542,14 +171,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Set parameters to search for a hotel\n",
+    "params = {\n",
+    "    \"radius\": 5000,\n",
+    "    \"types\": \"hotel\",\n",
+    "    \"key\": g_key\n",
+    "    }\n",
+    "\n",
+    "# Iterate through \n",
+    "for index, row in best_weather.iterrows():\n",
+    "    # get lat, lon from df\n",
+    "    lat = row[\"Lat\"]\n",
+    "    lon = row[\"Lon\"]\n",
+    "    \n",
+    "    params[\"location\"] = f\"{lat},{lon}\"\n",
+    "    # base url\n",
+    "    base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "\n",
+    "    # run a request using our params dictionary\n",
+    "    response = requests.get(base_url, params=params)\n",
+    "    address = response.json()\n",
+    "    try:\n",
+    "        best_weather['Hotel Name'] = address[\"results\"][0][\"name\"]\n",
+    "    except:    \n",
+    "        print('skipping error')\n",
+    "        pass\n",
+    "best_weather"
+   ]
   },
   {
    "cell_type": "code",
@@ -557,7 +206,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# NOTE: Do not change any of the code in this cell\n",
+    "humidity_level = best_weather[\"Humidity\"].tolist()\n",
+    "humidity_level\n",
+    "hotel_name = best_weather['Hotel Name'].tolist()\n",
+    "hotel_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: Do not change the code in this cell \n",
     "\n",
     "# Using the template add the hotel marks to the heatmap\n",
     "info_box_template = \"\"\"\n",
@@ -568,9 +229,9 @@
     "</dl>\n",
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
-    "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "hotel_info = [info_box_template.format(**row) for index, row in best_weather.iterrows()]\n",
+    "hotel_locations = best_weather[[\"Lat\", \"Lon\"]].astype(float)\n",
+    "hotel_locations"
    ]
   },
   {
@@ -579,10 +240,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add marker layer ontop of heat map\n",
+    "# Create a humidity Heatmap layer\n",
+    "fig = gmaps.figure()\n",
     "\n",
+    "heat_layer = gmaps.heatmap_layer(hotel_locations, weights= humidity_level,\n",
+    "                                dissipating=False, max_intensity=100,\n",
+    "                                point_radius=2)\n",
     "\n",
-    "# Display figure\n"
+    "fig.add_layer(heat_layer)\n",
+    "\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Creat Bank Marker Map\n",
+    "hotel_layer = gmaps.symbol_layer(\n",
+    "hotel_locations, fill_color = 'rgba(100,150,0,0.4)',\n",
+    "    stroke_color= 'rgba(0,150,0,0.4)', scale=2,\n",
+    "    info_box_content=[f\"Hotel Name:{hotel}\" for hotel in hotel_name]\n",
+    ")\n",
+    "\n",
+    "fig = gmaps.figure()\n",
+    "fig.add_layer(hotel_layer)\n",
+    "\n",
+    "fig"
    ]
   },
   {
@@ -590,7 +278,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a combined map\n",
+    "fig = gmaps.figure()\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig.add_layer(hotel_layer)\n",
+    "\n",
+    "fig\n"
+   ]
   }
  ],
  "metadata": {
